feat: Added Authentication method Token Bearer
